src/objects/Competitor__c.object
<CustomObject>
    <description>This object is a central hub to track all they key information about your competitors</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>The address of the HQ for the competitor</description>
        <inlineHelpText>The address of the HQ for the competitor</inlineHelpText>
        <label>Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <description>Name of the CEO</description>
        <inlineHelpText>Name of the CEO</inlineHelpText>
        <label>CEO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Advantages__c</fullName>
        <description>The Competitors advantages over our product</description>
        <inlineHelpText>The Competitors advantages over our product</inlineHelpText>
        <label>Competitor Advantages</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Logo__c</fullName>
        <label>Competitor Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Rating__c</fullName>
        <inlineHelpText>How do their customers rate their product</inlineHelpText>
        <label>Customer Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely Unsatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <description>Number of Customers the Competitor has</description>
        <inlineHelpText>Number of Customers the Competitor has</inlineHelpText>
        <label># of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Status__c</fullName>
        <description>The status of the data, based on the Information Status field.  To be used on views and reports</description>
        <formula>IMAGE(
CASE(Information_Status__c,
&quot;Recently Updated&quot;,&quot;/servlet/servlet.FileDownload?file=0151a000000Aqlp&quot;,
&quot;Current&quot;, &quot;/servlet/servlet.FileDownload?file=0151a000000Aqlu&quot;,
&quot;Update In Progress&quot;, &quot;/servlet/servlet.FileDownload?file=0151a000000AqmE&quot;,
&quot;Out of Date&quot;, &quot;/servlet/servlet.FileDownload?file=0151a000000Aqm4&quot;,
&quot;/servlet/servlet.FileDownload?file=0151a000000Aqlz&quot;), &quot;Status&quot;)

/*CASE(Information_Status__c,
&quot;Recently Updated&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151a000000Aqlz&quot;, &quot;New Update&quot;),
&quot;Current&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151a000000Aqlu&quot;, &quot;Current&quot;),
&quot;Update In Progress&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151a000000AqmE&quot;, &quot;Update in Progress&quot;),
&quot;Out of Date&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151a000000Aqm4&quot;, &quot;Out of Date&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151a000000Aqlz&quot;, &quot;Unknown&quot;))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Criteria__c</fullName>
        <description>This reviews the information that customers should keep in mind when evaluating their product.

Example:  They may have XYZ but they don&apos;t have 24/7 support, they require a 36 month contract, etc</description>
        <inlineHelpText>This reviews the information that customers should keep in mind when evaluating their product.

Example:  They may have XYZ but they don&apos;t have 24/7 support, they require a 36 month contract, etc</inlineHelpText>
        <label>Evaluation Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Health__c</fullName>
        <description>How is the competitor doing financially?</description>
        <inlineHelpText>How is the competitor doing financially?</inlineHelpText>
        <label>Financial Health</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Status__c</fullName>
        <description>The current status of the information about the competitor.
Recently Updated:  Updated in the last 7 days
Current: Updated this quarter
Update in Progress: Self-explanitory
Out of Date: 1+ Quarter since last review</description>
        <inlineHelpText>The current status of the information about the competitor.

Recently Updated:  Updated in the last 7 days
Current: Updated this quarter
Update in Progress: Self-explanitory
Out of Date: 1+ Quarter since last review</inlineHelpText>
        <label>Information Status</label>
        <picklist>
            <picklistValues>
                <fullName>Recently Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <description>The date the competitor information was last updated</description>
        <inlineHelpText>The date the competitor information was last updated</inlineHelpText>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Opps_We_Competed_Against_Them__c</fullName>
        <description>Rollup Count of how many opps we competed against them in</description>
        <inlineHelpText>Rollup Count of how many opps we competed against them in</inlineHelpText>
        <label>Number of Opps We Competed Against Them</label>
        <summaryForeignKey>Competitor2Opportunity__c.Competitor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>Our Product or Service Advantages Over the Competitor</description>
        <inlineHelpText>Our Product or Service Advantages Over the Competitor</inlineHelpText>
        <label>Our Advantages</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Percent_of_Marketshare__c</fullName>
        <description>How much of the market they have as customers.</description>
        <inlineHelpText>How much of the market they have as customers.</inlineHelpText>
        <label>Percent of Marketshare</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Positioning__c</fullName>
        <description>Oneliner, detailed overview of who the competitor is/who they position themselves to be.</description>
        <inlineHelpText>A clear, concise, detailed overview of who the competitor is/position themselves to be,</inlineHelpText>
        <label>Positioning</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Tips__c</fullName>
        <description>Selling Tips against the Competitor</description>
        <inlineHelpText>Selling Tips against the Competitor</inlineHelpText>
        <label>Selling Tips</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Source_of_Customer_Rating__c</fullName>
        <description>Where we obtained the customer rating data</description>
        <inlineHelpText>Where we obtained the customer rating data</inlineHelpText>
        <label>Source of Customer Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <description>Who is buying their product? Enterprise Corps, SMB, Consumers, High end, luxury, affordable, etc</description>
        <inlineHelpText>Who is buying their product/the characteristics of their target buyer.

Example terms:  Enterprise Corps, SMB, Consumers, High end, luxury, affordable, etc</inlineHelpText>
        <label>Target Market</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Their_Pricing__c</fullName>
        <description>When comparing their pricing to ours, how do they stand vs us?</description>
        <inlineHelpText>When comparing their pricing to ours, how do they stand vs us?</inlineHelpText>
        <label>Their Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>Much Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About the Same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Much Lower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <description>Stock Ticker Symbol</description>
        <inlineHelpText>Stock Ticker Symbol</inlineHelpText>
        <label>Ticker Symbol</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What are we competition against them in?

Direct Competitors (same product and category)
Indirect Competitors (offer the same stuff different category)
Replacement Competitors (different product and category)</description>
        <inlineHelpText>What are we competition against them in?

Direct Competitors (same product and category)
Indirect Competitors (offer the same stuff different category)
Replacement Competitors (different product and category)</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_they_are_better_for__c</fullName>
        <description>The market that is better suited with the competitors product than ours</description>
        <inlineHelpText>The market that is better suited with the competitors product than ours</inlineHelpText>
        <label>Who they are better for</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <description>The Year the Company was Founded</description>
        <inlineHelpText>The Year the Company was Founded</inlineHelpText>
        <label>Year Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Data_Status__c</columns>
        <columns>NAME</columns>
        <columns>Last_Update__c</columns>
        <columns>Competitor_Advantages__c</columns>
        <columns>Our_Advantages__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Competitors</fullName>
        <columns>Data_Status__c</columns>
        <columns>Last_Update__c</columns>
        <columns>NAME</columns>
        <columns>Positioning__c</columns>
        <columns>Their_Pricing__c</columns>
        <columns>Customer_Rating__c</columns>
        <columns>Evaluation_Criteria__c</columns>
        <columns>Our_Advantages__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Competitors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>